<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/app/res/edu.gatech.seclass.glm.NewGroceryListView"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.gatech.seclass.glm.activities.MultiListManagerActivity">

    <Button
        android:id="@+id/create_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="46dp"
        android:text="@string/create_list_button"
        android:textAllCaps="false"
        tools:text="Create List" />

    <Button
        android:id="@+id/rename_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="54dp"
        android:text="@string/rename_list_button"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/GroceryListTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/create_list_button"
        android:layout_marginStart="12dp"
        android:layout_marginTop="18dp"
        android:text="@string/grocery_list_text_view"
        android:textAllCaps="false"
        tools:text="Grocery List" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/GroceryListTextView"
        android:background="@android:color/darker_gray" />


    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/rename_list_button"
        android:layout_alignParentBottom="true"
        android:text="@string/delete"
        android:textAllCaps="false" />

    <ListView
        android:id="@+id/grocery_ListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/delete_button"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/GroceryListTextView"
        android:layout_below="@+id/view"
        android:layout_marginTop="17dp"
        android:choiceMode="singleChoice" />

</RelativeLayout>
