<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_quantity"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="60dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/change_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/enter_quantity_for"
            android:layout_weight=".5"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/change_quantity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_weight=".5"
            android:textAlignment="center"
            android:paddingLeft="5sp"
             />
    </LinearLayout>

    <EditText
        android:id="@+id/new_quantity_edit_text"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:hint="@string/new_quantity"
        android:textAlignment="center"
        android:layout_gravity="center"/>

</LinearLayout>