<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/add_by_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/add_by_name"
            android:textAlignment="viewStart"
            android:textSize="24sp" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="60dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/add_type_to_item"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="60dp"
                android:text="@string/pick_item_type_for"
                android:textAlignment="viewStart"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/new_item_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="60dp"
                android:textAlignment="viewStart"
                android:textSize="18sp" />
        </LinearLayout>


        <ListView
            android:id="@+id/add_by_type_list_view1"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="14dp"
            android:choiceMode="singleChoice" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight=".5"
                android:text="@string/item_type"
                android:textAlignment="viewEnd" />

            <EditText
                android:id="@+id/item_name_edit_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight=".5"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/quantity_text_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight=".5"
                android:text="@string/quantity"
                android:textAlignment="viewEnd" />

            <EditText
                android:id="@+id/quantity_edit_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight=".5" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>