<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/add_by_type_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/add_by_type"
            android:textAlignment="viewStart"
            android:textSize="24sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="60dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/selected_item_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="14dp"
                android:layout_weight=".5"
                android:text="@string/select_item_type"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                />
        </LinearLayout>

        <View
            android:id="@+id/view_1"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="60dp"
            android:background="@android:color/darker_gray" />

        <ListView
            android:id="@+id/item_type_list_view"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="10dp"
            android:choiceMode="singleChoice" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/selected_item_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="14dp"
                android:text="@string/select_item_name"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:layout_weight=".5"/>
        </LinearLayout>

        <View
            android:id="@+id/view_2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="60dp"
            android:background="@android:color/darker_gray" />

        <ListView
            android:id="@+id/item_name_list_view"
            android:layout_width="match_parent"
            android:layout_height="150dp"

            android:layout_marginLeft="16dp"
            android:layout_marginRight="10dp"
            android:choiceMode="singleChoice" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight=".5"
            android:text="@string/quantity"
            android:textAlignment="viewEnd" />

        <EditText
            android:id="@+id/quantity_edit_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight=".5" />

    </LinearLayout>

</LinearLayout>